--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,17 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Outfit', sans-serif;
  
-    background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    background: #fef3c7;
+    background-image: url("/src/images/bg.png");
   background-attachment: fixed;
+  
 }
-
+@media screen and (max-width: 768px) {
+  body{
+    background-color:#fef3c7;
+    background-image: url("/src/images/bg2.png");
+  }
+}
 body::-webkit-scrollbar {
   width: 12px; /* width of the entire scrollbar */
 }
